@@ -49,7 +49,13 @@ build() {
 package() {
   cd "$srcdir/$_gitname-build"
   make DESTDIR="$pkgdir/" install || return 1
+  install -Dm 0644 "AUTHORS" "$pkgdir/usr/share/doc/morituri/AUTHORS"
+  install -Dm 0644 "ChangeLog" "$pkgdir/usr/share/doc/morituri/ChangeLog"
+  install -Dm 0644 "HACKING" "$pkgdir/usr/share/doc/morituri/HACKING"
+  install -Dm 0644 "NEWS" "$pkgdir/usr/share/doc/morituri/NEWS"
   install -Dm 0644 "README" "$pkgdir/usr/share/doc/morituri/README"
+  install -Dm 0644 "RELEASE" "$pkgdir/usr/share/doc/morituri/RELEASE"
+  install -Dm 0644 "TODO" "$pkgdir/usr/share/doc/morituri/TODO"
 }
 
 # vim:set ts=2 sw=2 et:
