@@ -2,6 +2,7 @@
 
 	* 20130203-1 :
 	Added ChangeLog.
+	Copy more files to /usr/share/doc/morituri/.
 
 2013-01-25 Frederik "Freso" S. Olesen <archlinux@freso.dk>
 
